objects/Sales_Area__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Areas</relationshipLabel>
        <relationshipName>Sales_Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BI_Links__c</fullName>
        <formula>HYPERLINK(&apos;/apex/BusinessWarehouseReport?id=&apos; &amp; Sub_Account__c, &apos;Show Salesman Report&apos;)</formula>
        <label>Show Salesman Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group_1__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group_2__c</fullName>
        <label>Freight &amp; Small Order Surcharge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group_3__c</fullName>
        <label>Order Confirmation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>TEXT(Sub_Account__r.Division__c)</formula>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_Type__c</fullName>
        <label>Exchange Rate Type</label>
        <picklist>
            <picklistValues>
                <fullName>001D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>002D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZKE Sales Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIR Aftalt Kurs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIR Phillips Aftalt Kurs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drives Exchange Rate IPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchange Rate Type for York</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Euro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Euro-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Euro-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Euro for B Exchange Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchange Rate China CNCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchange Rate Denmark CNCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchange Rate Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchange Rate Type AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchange Rate Type Fixed GM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Exchange Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPP Specific Exchange Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India Customs Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Bank Exchange Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intrastat Exchange Rate Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCFDDK Actual Trans. Rate for Valuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCFDGB Customer Specific Exchange Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MXCO Investments Exch. Rate Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUCO Internal Exchange Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian Budget Exchange Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Exchange Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Std. Translation at Local Average Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UACO Indicative External Exchange Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kobskurs (Aktuel)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incoterms_1_SAP_ID__c</fullName>
        <formula>IF( CONTAINS( Incoterms_1__c, &quot; - &quot;),LEFT( Incoterms_1__c , FIND( &quot; -&quot;, Incoterms_1__c)), Incoterms_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incoterms 1 SAP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms_1__c</fullName>
        <description>INCO1</description>
        <label>Incoterms 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms_2_SAP_ID__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incoterms 2 SAP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms_2__c</fullName>
        <description>INCO2</description>
        <label>Incoterms 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Channel__c</fullName>
        <formula>Sales_Area_Master__r.Channel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master_Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Division__c</fullName>
        <formula>Sales_Area_Master__r.Division__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master_Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Sales_Org__c</fullName>
        <formula>Sales_Area_Master__r.Sales_Org__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master_Sales_Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_terms_SAP_ID__c</fullName>
        <formula>IF( CONTAINS( Payment_terms__c, &quot; - &quot;),LEFT( Payment_terms__c, FIND( &quot; -&quot;, Payment_terms__c)), &quot; &quot;)</formula>
        <label>Payment terms SAP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_terms__c</fullName>
        <description>ZTERM</description>
        <label>Payment terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Account_ID__c</fullName>
        <formula>Sub_Account__r.SAP_Account_ID__c</formula>
        <label>SAP Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Area_Master__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales Area Master</label>
        <referenceTo>Sales_Area_Master__c</referenceTo>
        <relationshipLabel>Sales Areas</relationshipLabel>
        <relationshipName>Sales_Areas</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Area_SAP_ID__c</fullName>
        <externalId>true</externalId>
        <label>Sales Area SAP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <formula>Sales_Area_Master__r.Sales_Area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Group__c</fullName>
        <label>Sales Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <label>Sales Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Account_Inactive__c</fullName>
        <formula>Sub_Account__r.Inactive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Account_Name__c</fullName>
        <formula>Sub_Account__r.Name</formula>
        <label>Sub Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Account</label>
        <referenceTo>Sub_Account__c</referenceTo>
        <relationshipLabel>Sales Areas</relationshipLabel>
        <relationshipName>Sales_Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warranty_SAP_ID__c</fullName>
        <formula>IF( CONTAINS( Customer_Group_4__c , &quot; - &quot;),LEFT( Customer_Group_4__c , FIND( &quot; -&quot;, Customer_Group_4__c )), &quot; &quot;)</formula>
        <label>Warranty SAP ID</label>
        <type>Text</type>
    </fields>
</CustomObject>